# SDM_Plugin_OSM_BuildingCreator_LoD1

./: LICENSE.md  README.md
osm_building_creator_lod1/: CMakeLists.txt  Lod1Dlg.cpp  Lod1Dlg.h  OsmBuildingCreator.cpp  OsmBuildingCreator.h  OsmParameter.h  PluginOsmBuildingCreator.cpp  PluginOsmBuildingCreator.h  lodDlgImpl.cpp  lodDlgImpl.h  osm-building-creator.fbp
